# agentgrep

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  eval-analyze.py  eval-bench.py  eval-deep-dive.py  eval-investigate.py  eval-pass2.py  eval-secondary.py
.github/workflows/: ci.yml
docs/: AGENTS.md  AGENT_SKILL.md  AGENT_SYSTEM_PROMPT.md  ARCHITECTURE.md  EVAL_PLAN.md  INSTALL.md  JSON_CONTRACT.md  PROJECT.md  RELEASE.md  ROADMAP.md  SEMANTIC.md
docs/dev/: SEMANTIC.md
docs/evaluation/: BENCHMARKS.md  DOGFOOD_FINDINGS.md  IMPLEMENTATION_PLAN.md  METRICS.md  README.md  REPORTING.md  RESULT_TEMPLATE.md  TASKS.md  TASK_SCHEMA.md  public-repos.jsonl
docs/evaluation/labels/: public-holdout-v0.1.jsonl  public-v0.1.jsonl  public-v0.2.jsonl  public-v0.3-validation.jsonl
docs/evaluation/tasks/: public-holdout-v0.1.jsonl  public-v0.1.jsonl  public-v0.2.jsonl  public-v0.3-validation.jsonl
scripts/: analyze-eval.py  check-eval-gates.py  eval-smoke.ps1  render-eval-report.py  run-eval.ps1  smoke.ps1  verify-install.ps1
skill-docs/: claude.md  codex.md  generic-agent.md  skill-template.md
src/: blast.rs  caller_body.rs  cli.rs  dep_resolve.rs  files.rs  index.rs  main.rs  map.rs  output.rs  overview.rs  peek.rs  rank.rs  related.rs  repo.rs  search.rs  semantic.rs  symbol.rs  text.rs  trace.rs  types.rs
src/parser/: extracted.rs  go.rs  javascript.rs  language.rs  mod.rs  python.rs  rust.rs  typescript.rs
