[package]
name = "agentgrep"
version = "0.3.3"
edition = "2021"
description = "fast local code radar for coding agents"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fastembed = "4"
globset = "0.4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
